# demo-provenance

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  docker-compose.yml  llm.py  main.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json  docker-compose.dev.yml  docker-compose.yml  post-create.sh
.github/workflows/: docker-image.yml
.streamlit/: config.toml
